# research_material_science

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  bartel2019-new-tolerance-factor.md  compute.py  debugger.py  evaluator.py  generate_code.py  input3.txt  lammps_runner.py  llm_client.py  llm_utils.py  log.lammps  main.py  mcts.py  ml_evaluation.py  prompts.py  proposer.py  pyproject.toml  run_cv_code.py  run_search.py  state.py
conf/: config.yaml
legacy/: compute.py  generate_code.py  input3.txt  llm_utils.py  main.py  ml_evaluation.py  prompts.py  run_cv_code.py
legacy/outputs/: cv_1.json  cv_2.json  cv_3.json
legacy/outputs/code/: compute_0_cv_1.py  compute_1_cv_2.py  compute_2_cv_3.py
legacy/outputs/csv/: Modified_Geometric_Stability_Factor_MGSF.csv
outputs/: colvars_1.conf  colvars_10.conf  colvars_11.conf  colvars_13.conf  colvars_15.conf  colvars_2.conf  colvars_3.conf  colvars_4.conf  colvars_regen_1.conf  colvars_regen_10.conf  colvars_regen_11.conf  colvars_regen_13.conf  colvars_regen_15.conf  colvars_regen_2.conf  colvars_regen_3.conf  colvars_regen_4.conf  cv_1.json  cv_2.json  cv_3.json  in.lammps  in_1.lammps  in_10.lammps  in_11.lammps  in_13.lammps  in_15.lammps  in_2.lammps  in_3.lammps  in_4.lammps  in_regen_1.lammps  in_regen_10.lammps  in_regen_2.lammps  in_regen_3.lammps  in_regen_4.lammps  llm_output_1.txt  llm_output_10.txt  llm_output_11.txt  llm_output_12.txt  llm_output_13.txt  llm_output_14.txt  llm_output_15.txt  (+16 more)
outputs/code/: compute_0_cv_1.py  compute_1_cv_2.py  compute_2_cv_3.py
outputs/csv/: Charge_Weighted_Octahedral_Mismatch_Index.csv  Charge_Weighted_Octahedral_Size_Mismatch_Index.csv
reproduce_evidence/: evidence1_abx3_classification.py  evidence2_double_perovskites.py  evidence3_dft_correlation.py
tests/: test_evaluator.py
